[workspace]
members = ["crates/*"]

[workspace.dependencies]
tokio = { version = "1.21.2", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres", "offline", "chrono"] }
axum = { version = "0.6.0", default-features = false, features = ["json", "headers", "macros", 'http2'] }
activitypub_federation = { git = "https://github.com/LemmyNet/activitypub-federation-rust", features = ["axum"] }
axum-macros = "0.3.0"
tower-http = { version = "0.3.4", features = ["trace", "fs"] }
reqwest = { version = "0.11.12", features = ["json", "native-tls-vendored"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
anyhow = "1.0.66"
speculoos = "0.10.0"
thiserror = "1.0.37"
once_cell = "1.16.0"
chrono = { version = "0.4.23", features = ["serde"] }
syntect = "5.0.0"
url = "2.3.1"