[package]
name = "gill-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# We need to make the background job crate compatible with tokio runtime
# to remove this
actix-rt = "2.7.0"

tokio.workspace = true
sqlx.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tower-http.workspace = true
axum.workspace = true
axum-macros.workspace = true
thiserror.workspace = true
activitypub_federation.workspace = true
once_cell.workspace = true
chrono.workspace = true

gill-db = { path = "../gill-db" }
gill-git = { path = "../gill-git" }
gill-settings = { path = "../gill-settings" }
gill-syntax = { path = "../gill-syntax" }
gill-markdown = { path = "../gill-markdown" }

uuid = "1.2.2"
enum_delegate = "0.2.0"
activitystreams-kinds = "0.2.1"
webfinger = "0.5.1"
tower = "0.4.13"
url.workspace = true
base64 = "0.20.0"

headers = "0.3"
oauth2 = "4.1"
async-session = "3.0.0"
http = "0.2"

askama = "0.11"
pulldown-cmark = "0.9.2"
toml = "0.5.9"
[features]
default = []
integration = []

[dev-dependencies]
tower = "0.4.13"
speculoos.workspace = true
archunit_rs = { git = "https://github.com/oknozor/archunit_rs.git", branch = "feat/layer-rules" }

[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["integration"]
