[package]
name = "gill-git-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
shellwords = "1.1.0"
gill-ipc = { path = "../gill-ipc" }

[[bin]]
name = "post-receive"
path = "src/post-receive.rs"

[[bin]]
name = "gill-git-server"
path = "src/pack-serve.rs"