[package]
name = "gill-git-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
shellwords = "1.1.0"
tokio.workspace = true
gill-db = { path = "../gill-db" }
gill-settings = { path = "../gill-settings" }

[[bin]]
name = "post-receive"
path = "src/post-receive.rs"

[[bin]]
name = "gill-git-server"
path = "src/pack-serve.rs"