[package]
name = "gill-git"
version = "0.1.0"
edition = "2021"

[dependencies]
git-repository = { version = "0.31.0", features = ["blocking-network-client"] }
anyhow = "1.0.66"
tracing = "0.1"
imara-diff = "0.1.5"
mime_guess = "2.0.4"
cmd_lib = "1.3.0"

[dev-dependencies]
sealed_test = "1.0.0"
speculoos = "0.11.0"