[package]
name = "gill-ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
sqlx.workspace = true
tracing.workspace = true
serde.workspace = true
eyre.workspace = true
rmp-serde = "1.1.1"
gill-db = { path = "../gill-db" }
