[package]
name = "ruisseau-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
once_cell.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json = "1.0.87"

axum = { version = "0.6.0-rc.4", features = ["json", "headers", "macros"] }
axum-macros = "0.3.0-rc.2"
ruisseau-git = { path = "../ruisseau-git" }
tower-http = { version = "0.3.0", features = ["trace", "fs"] }
aide = { version = "0.7.1", features = ["axum", "redoc", "macros", "axum-extra-query"] }
dotenvy = "0.15.6"
reqwest = { version = "0.11.12", features = ["json", "native-tls-vendored"] }
config = "0.13.2"
askama = "0.11"
pulldown-cmark = "0.9.2"
ruisseau-db = { path = "../ruisseau-db" }

[features]
default = []
integration = []

[dev-dependencies]
tower = "0.4.13"
speculoos.workspace = true


[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["integration"]
