[package]
name = "ruisseau-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
once_cell.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tower-http.workspace = true
axum.workspace = true
axum-macros.workspace = true

ruisseau-db = { path = "../ruisseau-db" }
ruisseau-git = { path = "../ruisseau-git" }
activitypub_federation.workspace = true

headers = "0.3"
oauth2 = "4.1"
async-session = "3.0.0"
http = "0.2"

dotenvy = "0.15.6"
askama = "0.11"
config = "0.13.2"
pulldown-cmark = "0.9.2"
syntect = "5.0.0"

[features]
default = []
integration = []

[dev-dependencies]
tower = "0.4.13"
speculoos.workspace = true


[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["integration"]
