[package]
name = "ruisseau-git-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
shellwords = "1.1.0"

[[bin]]
name = "post-receive-hook"
path = "src/post-receive-hook.rs"

[[bin]]
name = "ruisseau-git-server"
path = "src/pack-serve.rs"