[package]
name = "ruisseau-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git-traverse = "0.18.0"
git-repository = "0.28.0"
git-odb = "0.36.0"
git-hash = "0.9.11"
git-object = "0.22.1"
eyre = "0.6.8"

[dev-dependencies]
sealed_test = "1.0.0"