[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0-rc.4", features = ["json"]}
tokio = { version = "1.21.2", features = [ "full" ] }
serde_json = "1.0.87"
serde = {  version =  "1.0.147", features = [ "derive"] }
gitox = { path = "../gitox" }


